
2010-05-16
	* src/libgpukernel: warp -> wavefront, thread -> work_item
	* src/libgpukernel/gpuisa.c: current decoded instruction added as a field of struct
		gpu_wavefront_t.

2010-05-17
	* src/libmisc/misc.h: double linked lists generalized.
	* src/libcpukernel/cpukernel.c: using new double linked list macros.
	* src/libgpukernel: work-groups created. Lists of wavefronts.
	* src/libgpukernel/gpumachine.c: barriers implemented for synchronization among
		wavefronts in the same work-group.
	* src/libgpukernel: Work-groups include lists of running/finished wavefronts, or
		wavefronts waiting in barriers. OpenCL kernel structure includes a list
		of running/finished work-groups.

2010-05-18
	* src/libstruct/config.h: functions added to check format of configuration files.
	* src/libgpukernel/opencl-obj.c: 'gpu_max_work_group_size' return as result value
		for OpenCL call.

2010-05-22
	* src/libgpuarch/gpupipeline.c: initial 6-stage design of GPU pipeline.
	* src/libgpukernel/gpukernel-local.h: file removed, unified in 'gpukernel.h'

2010-05-25
	* src/libgpukernel: fields in work-group, work-item, and wavefront unified.
	* src/libgpukernel: structure 'gpu_ndrange_t' added, code reorganized.

2010-05-26
	* src/libgpuarch: schedule stage, instruction emulation

2010-05-28
	* src/libcpuarch/processor.c: stage time measures removed. A profiler tool like
		'gprof' should be used for this purpose.
	* src/libcpuarch: names of files implementing stages changed.
	* src/libstruct/config.{c|h}: module redesigned.
	* src/libcpuarch/cpuarch.c: configuration for CPU moved into a configuration file
		with IniFile format, instead of command-line arguments.

2010-05-29
	* src/m2s.c: command-line interface updated.
	* src/m2s-fast.c: file removed. From now on, all is integrated in a single
		executable file: m2s
	* src/libcpuarch: global variables sim_cycle and sim_inst removed.
	* src/libcpuarch/sched.c: variable 'cpu' changed by 'node'.
